cmake_minimum_required(VERSION 3.28)
project(24_7_17)

set(CMAKE_CXX_STANDARD 17)

add_executable(24_7_17 main.cpp
        test.h
        test. cpp
        demo1.cpp
        demo1.cpp
        demo1.h
        111.cpp
        111.h
        111.cpp
)
add_executable(student.h
        student.cpp)

add_executable(demo demo1.cpp)
add_executable(111 111.cpp)